--- a/ReportSendexTest.cls
+++ b/ReportSendexTest.cls
@@ -3,18 +3,17 @@
  *
  */
 
-
 @IsTest
 private class ReportSendexTest {
     @IsTest (SeeAllData=true)
     static void testCanSendCSVReport() {
         List<Report> reports = [
-            Select Id, DeveloperName
-            FROM Report
-            Limit 5
+                Select Id, DeveloperName
+                FROM Report
+                Limit 5
         ];
 
-        Map<String, List<String>> filtersByReport = new Map<String, List<String>>();
+        Map<Id, List<String>> filtersByReport = new Map<Id, List<String>>();
         for (Report report : reports) {
             filtersByReport.put(report.Id, new List<String>{'filter1', 'filter2', 'filter3'});
         }
@@ -22,11 +21,11 @@ private class ReportSendexTest {
         List<String> recipients = new List<String>{'test@example.com'};
         Messaging.SingleEmailMessage testEmail = new Messaging.SingleEmailMessage();
 
-        ReportSender sender = new ReportSender(filtersByReport, testEmail, 'csv');
+        ReportSendex sender = new ReportSendex(filtersByReport, testEmail, 'csv');
 
         String reportQuery = sender.getReportQuery(reports[0].id);
 
-        String expectedQuery = '/' + report.Id + '?csv=1' + '&pv0=filter1&pv1=filter2&pv2=filter3';
+        String expectedQuery = '/' + reports[0].Id + '?csv=1' + '&pv0=filter1&pv1=filter2&pv2=filter3';
         System.assertEquals(expectedQuery, reportQuery);
 
         // test methods do not allow callouts to ApexPages.PageReference, so we have to fake the content
@@ -48,12 +47,12 @@ private class ReportSendexTest {
     @IsTest (SeeAllData=true)
     static void testCanSendExcelReport() {
         List<Report> reports = [
-            Select Id, DeveloperName
-            FROM Report
-            Limit 5
+                Select Id, DeveloperName
+                FROM Report
+                Limit 5
         ];
 
-        Map<String, List<String>> filtersByReport = new Map<String, List<String>>();
+        Map<Id, List<String>> filtersByReport = new Map<Id, List<String>>();
         for (Report report : reports) {
             filtersByReport.put(report.Id, new List<String>{'filter1', 'filter2', 'filter3'});
         }
@@ -61,11 +60,11 @@ private class ReportSendexTest {
         List<String> recipients = new List<String>{'test@example.com'};
         Messaging.SingleEmailMessage testEmail = new Messaging.SingleEmailMessage();
 
-        ReportSender sender = new ReportSender(filtersByReport, testEmail, 'xls');
+        ReportSendex sender = new ReportSendex(filtersByReport, testEmail, 'xls');
 
         String reportQuery = sender.getReportQuery(reports[0].id);
 
-        String expectedQuery = '/' + report.Id + '?xls=1' + '&pv0=filter1&pv1=filter2&pv2=filter3';
+        String expectedQuery = '/' + reports[0].Id + '?xls=1' + '&pv0=filter1&pv1=filter2&pv2=filter3';
         System.assertEquals(expectedQuery, reportQuery);
 
         // test methods do not allow callouts to ApexPages.PageReference, so we have to fake the content
@@ -76,11 +75,32 @@ private class ReportSendexTest {
         Messaging.EmailFileAttachment attachment = sender.getReportAttachment(reportContent, reportName);
         String today = Datetime.now().format('MM-dd-YYYY');
 
-        System.assertEquals(reportName + '_' + today + '.csv', attachment.getFileName());
+        System.assertEquals(reportName + '_' + today + '.xls', attachment.getFileName());
         System.assertEquals('application/vnd.ms-excel', attachment.getContentType());
 
         List<Messaging.EmailFileAttachment> attachments = sender.getAllReportAttachments();
 
         System.assertEquals(reports.size(), attachments.size());
+    }
+
+
+    @IsTest (SeeAllData=true)
+    static void testCanSendEmail() {
+        List<Report> reports = [
+                Select Id, DeveloperName
+                FROM Report
+                Limit 5
+        ];
+
+        Map<Id, List<String>> filtersByReport = new Map<Id, List<String>>();
+        for (Report report : reports) {
+            filtersByReport.put(report.Id, new List<String>{'filter1', 'filter2', 'filter3'});
+        }
+
+        List<String> recipients = new List<String>{'test@example.com'};
+        Messaging.SingleEmailMessage testEmail = new Messaging.SingleEmailMessage();
+
+        System.enqueueJob(new ReportSendex(filtersByReport, testEmail, 'xls'));
+
     }
 }
